spec/.test/config/invalid/isect/aliases/extensions.php
<?php

return [
    'aliases' => [
        'id' => 'alias',
    ],
    'extensions' => [
        'id' => function () {},
    ],
];
